--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
                     output.outputFile = new File(file.parent, fileName)
                 }
             }
+            debuggable true
         }
         release {
             minifyEnabled false
@@ -45,9 +46,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile(name: 'color_picker_library-release', ext: 'aar')
     compile 'com.android.support:appcompat-v7'
-    compile 'com.android.support:design:25.1.1'
-    compile 'com.android.support:support-v4:25.1.1'
-    compile 'com.android.support:recyclerview-v7:25.1.1'
+    compile 'com.android.support:design:25.3.0'
+    compile 'com.android.support:support-v4:25.3.0'
+    compile 'com.android.support:recyclerview-v7:25.3.0'
     compile 'com.google.android.gms:play-services-auth:10.2.0'
     compile files('libs/google-api-client-android-1.21.0.jar')
     compile files('libs/google-http-client-android-1.21.0.jar')
@@ -61,5 +62,6 @@ dependencies {
     compile files('libs/picasso-2.5.2.jar')
     compile 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
     compile 'pub.devrel:easypermissions:0.3.0'
-    compile 'com.android.support:cardview-v7:25.1.1'
+    compile 'com.android.support:cardview-v7:25.3.0'
+    compile group: 'joda-time', name: 'joda-time', version: '2.3'
 }
